--- a/res/layout/grid_view.xml
+++ b/res/layout/grid_view.xml
@@ -10,10 +10,10 @@
 
 <GridView 
     android:id="@+id/grid_view"
-    android:layout_width="400dp"
-    android:layout_height="400dp"
-    android:numColumns="2"
-    android:columnWidth="20dp"
+    android:layout_width="800dp"
+    android:layout_height="wrap_content"
+    android:numColumns="4"
+    android:columnWidth="200dp"
     android:horizontalSpacing="5dp"
     android:verticalSpacing="5dp"
     android:layout_gravity="center"
